--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.5",
+    "sass": "^1.83.4",
     "typed.js": "^2.1.0"
   },
   "devDependencies": {
